// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Slider.Item Take snapshot 1`] = `
<div
  className="uu5-bricks-slider uu5-bricks-slider-size-m"
  id="uuID"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  title={null}
>
  <Backdrop
    hidden={true}
    id="uuID-backdrop"
    mainAttrs={
      Object {
        "onMouseUp": [Function],
        "onTouchEnd": [Function],
      }
    }
    onClick={[Function]}
  />
  <div
    className="uu5-bricks-slider-track"
  >
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      content="1"
      id="uuID02"
      key="uuID02"
      ref_={[Function]}
    />
    <slider-item
      _checkValue={[Function]}
      _getStyle={[Function]}
      _max={10}
      _min={0}
      _step={1}
      content="2"
      id="uuID03"
      key="uuID03"
      ref_={[Function]}
      value={3}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkGrammar=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkGrammar=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkHighlight=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkHighlight=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkSpaces=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item checkSpaces=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item className="my-classname" 1`] = `
<div
  className="uu5-bricks-slider-selection my-classname"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item className="test-classname" 1`] = `
<div
  className="uu5-bricks-slider-selection test-classname"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
      <UU5.Common.TextCorrectorContextConsumer
        key="0"
        text="This is Content from ContentMixin"
      />
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item content=12345 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
      12345
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item controlled=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item controlled=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item default props 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item disabled=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item disabled=false 3`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item disabled=true 1`] = `
<div
  className="uu5-bricks-slider-selection uu5-common-disabled"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={true}
    name={null}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Slider.Item disabled=true 3`] = `
<div
  className="uu5-bricks-slider-selection uu5-common-disabled"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={true}
    name={null}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Slider.Item dynamic=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item dynamic=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-slider-selection uu-fulltextsearch-0"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item hidden=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item hidden=false 3`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item hidden=true 1`] = `
<div
  className="uu5-bricks-slider-selection uu5-common-hidden"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item hidden=true 3`] = `
<div
  className="uu5-bricks-slider-selection uu5-common-hidden"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item id="myId" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="myId"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item id="test-id" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="test-id"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item name="myName" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name="myName"
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item nestingLevel="inline" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item noIndex=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item noIndex=true 1`] = `
<div
  className="uu5-bricks-slider-selection uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item noPrint=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item noPrint=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item selected=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item selected=true 1`] = `
<div
  className="uu5-bricks-slider-selection uu5-common-selected"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item style={"margin":8} 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item textCorrector=false 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item textCorrector=true 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "0%",
    }
  }
  title="My Tooltip"
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={0}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item value=10 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "100%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={10}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;

exports[`UU5.Bricks.Slider.Item value=100 1`] = `
<div
  className="uu5-bricks-slider-selection"
  id="uuID"
  name={null}
  style={
    Object {
      "width": "100%",
    }
  }
  title={null}
>
  <input
    className="uu5-bricks-slider-input"
    disabled={false}
    name={null}
    onChange={[Function]}
    type="range"
    value={10}
  />
  <div
    className="uu5-bricks-slider-pointer"
  >
    <span>
       
    </span>
  </div>
</div>
`;
